# singa

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  Makefile.bak  Makefile.sep  MakefileNet  Makefile_anh  Makefile_dary  Makefile_gtest  Makefile_wangwei  README.md  api.odp  astyle.conf  ciidaa@sunfire  compile  dary.test  mpi-beakers  o  perf.py
examples/imagenet12/: cluster.conf  datahost  group.sh  hostfile  model.conf  multigroup.conf  node.sh  rack0  rack12  rack2  run.sh  script.sh  system.conf  tmp
examples/mnist/: Readme.md  batch.sh  cluster.conf  conv.conf  hostfile  mlp.conf  run.sh  simple.conf
include/: coordinator.h  server.h  worker.h
include/coordinator/: coordinator.h
include/core/: common.h  disk-table.h  distributed-memory.h  file.h  global-table.h  hash.h  local-table.h  master.h  memory-server.h  network_queue.h  request_dispatcher.h  request_queue.h  rpc.h  shard.h  slave.h  sparse-table.h  static-initializers.h  stringpiece.h  table-registry.h  table.h  table_delegate.h  table_server.h  timer.h  tuple.h
include/da/: arraycomm.h  arraymath.h  ary.h  darray.h  dary.h  gary.h  larray.h  lary.h  parray.h  uarray.h
include/darray/: area.h  arraycomm.h  dalib.h  darray.h  dary.h  garray.h  larray.h  offset.h  range.h  shape.h
include/datasource/: data_loader.h  data_source.h  label_source.h  rgb_dir_source.h
include/disk/: data_reader.h  data_source.h  feature_reader.h  idx_reader.h  label_dir_reader.h  label_reader.h  label_source.h  record_reader.h  rgb_dir_reader.h  rgb_dir_source.h  rgbimage_reader.h
include/model/: base_layer.h  blob.h  conv_edge.h  data_layer.h  data_source.h  edge.h  euclidean_loss_edge.h  inner_product_edge.h  lapis.h  layer.h  linear_layer.h  logistic_layer.h  lrn_edge.h  model.h  myacc.h  net.h  neuralnet.h  param.h  pooling_edge.h  relu_layer.h  row_param.h  sgd_trainer.h  softmax_loss_edge.h  solver.h  tensor.h  trainer.h
include/model_controller/: model.h  myacc.h
include/mshadow/: cxxnet_op.h  tensor.h  tensor_base.h  tensor_container.h  tensor_cpu-inl.hpp  tensor_expr.h  tensor_expr_engine-inl.hpp  tensor_expr_ext.h  tensor_io.h  tensor_random.h  tensor_sse-inl.hpp
include/net/: conv_edge.h  data_layer.h  edge.h  edges.h  inner_product_edge.h  lapis.h  layer.h  layers.h  linear_layer.h  lrn_edge.h  model.h~  net.h  param.h  pooling_edge.h  prediction_layer.h  relu_layer.h  sgd_trainer.h  softmax_loss_edge.h  solver.h  trainer.h
include/process/: coordinator.h  worker.h
include/proto/: common.pb.h  lapis.pb.h  model.pb.h  system.pb.h  worker.pb.h
include/server/: server.h
include/utils/: blob.h  cluster.h  common.h  debug.h  factory.h  global_context.h  graph.h  hash.h  lapis.h  layer_factory.h  math.h  math_helper.h  network.h  network_service.h  network_thread.h  param.h  param_updater.h  proto_helper.h  router.h  shard.h  singleton.h  start_deamon.h  stringpiece.h  timer.h  tuple.h  updater.h
include/worker/: .layer.h.swp  base_layer.h  blob.h  delegate.h  edge.h  euclidean_loss_layer.h  inner_product_layer.h  layer.h  model_controller.h  neuralnet.h  param.h  param_manager.h  row_param.h  sgd.h  sigmoid_layer.h  solver.h  worker.h
script/: comm.sh  download.sh  graph.py  load_data.py  node-link.json  node.sh  perf.py
src/: coordinator.cc  main.cc  server.cc  worker.cc
src/coordinator/: coordinator.cc
src/core/: CMakeLists.txt  common.cc  common.proto  disk-table.cc  distributed-memory.cc  file.cc  global-table.cc  local-table.cc  master.cc  memory-server.cc  network_queue.cc  request_dispatcher.cc  request_queue.cc  rpc.cc  shard.cc  static-initializers.cc  stringpiece.cc  table-registry.cc  table.cc  table_delegate.cc  table_server.cc  test.cc  worker.proto
src/da/: arraycomm.cc  arraymath.cc  darray.cc  dary.cc  gary.cc  larray.cc  parray.cc  test.cc  uarray.cc
src/darray/: area.h  arraycomm.cc  dalib.h  darray.cc  darray.cpp  darray.h  dary.cc  dary_test.cc  garray.cc  garray.cpp  garray.h  larray.cc  larray.cpp  larray.h  main.cc  main.cpp  range.h  shape.h
src/datasource/: data_loader.cc  data_source.cc  label_source.cc  rgb_dir_source.cc  shard.cc
src/disk/: data_reader.cc  data_source.cc  feature_reader.cc  idx_reader.cc  label_dir_reader.cc  label_reader.cc  label_source.cc  record_reader.cc  rgb_dir_reader.cc  rgb_dir_source.cc  rgbimage_reader.h
src/model/: base_layer.cc  blob.cc  conv_edge.cc  data_layer.cc  data_source.cc  edge.cc  euclidean_loss_edge.cc  inner_product_edge.cc  lapis.cc  layer-impl.cc  layer.cc  linear_layer.cc  logistic_layer.cc  lrn_edge.cc  model.cc  model.cc~  net.cc  neuralnet.cc  param.cc  pooling_edge.cc  relu_layer.cc  row_param.cc  sgd_trainer.cc  softmax_loss_edge.cc  solver.cc  tensor.cc  trainer.cc
src/model_controller/: model.cc
src/models/: main.cc
src/net/: conv_edge.cc  data_layer.cc  edge.cc  edges.cc  inner_product_edge.cc  lapis.cc  layer.cc  layers.cc  linear_layer.cc  lrn_edge.cc  net.cc  param.cc  pooling_edge.cc  prediction_layer.cc  relu_layer.cc  sgd_trainer.cc  softmax_loss_edge.cc  solver.cc  trainer.cc
src/process/: coordinator.cc  worker.cc
src/proto/: CMakeLists.txt  cluster.pb.cc  cluster.pb.h  cluster.proto  common.pb.cc  common.pb.h  common.proto  common.proto~  lapis.pb.cc  lapis.pb.h  lapis.proto  model.pb.cc  model.pb.h  model.proto  system.pb.cc  system.pb.h  system.proto  worker.pb.cc  worker.pb.h  worker.proto
src/server/: server.cc
src/test/: test_blob.cc  test_consistency.cc  test_core.cc  test_disk_table.cc  test_feature_reader.cc  test_idx_reader.cc  test_label_source.cc  test_main.cc  test_mnistlayer.cc  test_neuralnet.cc  test_param.cc  test_proto.cc  test_rgb_dir_source.cc  test_shard.cc  test_single_worker.cc  test_split.cc  test_split_async.cc  test_table_server.cc  test_tuple.cc
src/utils/: CMakeLists.txt  blob.cc  cluster.cc  common.cc  global_context.cc  global_cotext.cc  graph.cc  lapis.cc  layer_factory.cc  network.cc  network_service.cc  network_thread.cc  param.cc  param_updater.cc  proto_helper.cc  router.cc  shard.cc  start_deamon.cc  stringpiece.cc  updater.cc
(+21 files in other folders)
